# py21cmwedge

./: .coveragerc  .gitignore  .travis.yml  README.md  pyproject.toml  setup.py
.github/workflows/: continuous-integration.yml
py21cm_wedge/tests/: test_uvgridder.py
py21cmwedge/: __init__.py  cosmo.py  dft.py  setup.py  uvgridder.py
py21cmwedge/notebooks/: Beam_Gridding.ipynb  DFT_Kernel_Effects.ipynb  DFT_Kernel_effects.ipynb  DFT_Kernel_effts.ipynb  FHD_Beam_Comparison.ipynb  Relative_weight_heights.ipynb  Rotation_Synthesis.ipynb  UVF_Uniform_Comparison.ipynb
py21cmwedge/tests/: __init__.py  test_cosmo.py  test_dft.py  test_uvgridder.py
py21cmwedge/tests/data/: test_antpos.txt
src/py21cmwedge/: __init__.py  cosmo.py  dft.py  uvgridder.py
src/py21cmwedge/notebooks/: Beam_Gridding.ipynb  DFT_Kernel_Effects.ipynb  Rotation_Synthesis.ipynb  UVF_Uniform_Comparison.ipynb  uvgridding.ipynb
src/py21cmwedge/tests/: test_cosmo.py  test_dft.py
src/py21cmwedge/tests/data/: __init__.py
tests/: test_uvgridder.py
