[build-system]
 requires      = [ "hatchling", "hatch-vcs" ]
 build-backend = "hatchling.build"


[project]
 dependencies    = [ "numpy>=2", "scipy>=1.16", "astropy>=7", "healpy>=1.18" ]
 name            = "py21cmwedge"
 dynamic         = [ "version" ]
 authors         = [ { name = "Matthew Kolopanis" } ]
 description     = "A utility to predict the theoretical wedge leakage from a radio intereferometric array"
 requires-python = ">=3.11"
 license         = { text = "BSD" }


 [project.optional-dependencies]
  dev = [ "pytest>=8" ]

[tool.pytest.ini_options]
 addopts = [ "--import-mode=importlib" ]

[tool.hatch]
 version.source               = "vcs"
 version.raw-options          = { root = "." }
 build.hooks.vcs.version-file = "src/py21cmwedge/version.py"

 [tool.hatch.build.targets.wheel]
  packages = [ "src/py21cmwedge" ]
