[build-system]
 requires      = [ "hatchling", "hatch-vcs" ]
 build-backend = "hatchling.build"


[project]
 dependencies = [
  "numpy>=2",
  "scipy>=1.16",
  "astropy>=7",
  "healpy>=1.18",
  "tqdm>=4.67.1",
  "numba>=0.61.2",
 ]
 name = "py21cmwedge"
 dynamic = [ "version" ]
 authors = [ { name = "Matthew Kolopanis" } ]
 description = "A utility to predict the theoretical wedge leakage from a radio intereferometric array"
 requires-python = ">=3.11"
 license = "BSD-2-clause"


 [project.optional-dependencies]
  dev = [ "pytest>=8", "pytest-cov>=6.2.1" ]

[tool.pytest.ini_options]
 addopts = [ "--import-mode=importlib" ]

[tool.hatch]
 version.source               = "vcs"
 version.raw-options          = { root = "." }
 build.hooks.vcs.version-file = "src/py21cmwedge/version.py"

 [tool.hatch.build.targets.wheel]
  packages = [ "src/py21cmwedge" ]

[tool.ruff]
 # In addition to the standard set of exclusions, omit all tests, plus a specific file.
 extend-exclude = [ "src/py21cmwedge/notebooks" ]

 [tool.ruff.lint]
  select = [ "E", "I", "F" ]
